--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines":{
+    "node":"16.16.0",
+    "npm":"8.11.0"
   }
 }
