--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "main":"server.js",
+  "engines":{
+    "node":"16.16.0",
+    "npm":"8.11.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -29,7 +34,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "heroku-postbuild":"npm install",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -51,9 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines":{
-    "node":"16.16.0",
-    "npm":"8.11.0"
   }
 }
