--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "main":"server.js",
   "engines":{
     "node":"16.16.0",
     "npm":"8.11.0"
@@ -34,8 +33,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "heroku-postbuild":"npm install",
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
