--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix reactFolderName && npm run build --prefix reactFolderName",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
