--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-advanced-pdf-upload": "^3.0.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
+    "react-file-viewer": "^1.2.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
